Clean up codes
Signed-off-by: awkoo <184658409+awkoo@users.noreply.github.com>